corrects script path and adds dragon jump function

--- a/static/style/index.css
+++ b/static/style/index.css
@@ -1,5 +1,5 @@
 .grid {
-  width: 600px;
+  width: 800px;
   height: 200px;
   border: 1px solid black;
   margin: auto;
